--- a/tutorial-icp.ipynb
+++ b/tutorial-icp.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Sensing and Intelligent System: ICP Exercise\n",
     "\n",
-    "By Nick Wang"
+    "By Chang-Yi Kuo and Nick Wang"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -315,7 +315,8 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
